# FinalTest

./: Administrators.db  CMakeLists.txt  Students.db  Students.db-shm  db.cpp  identifier.sqlite  main.cpp
